--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ venv/
 
 /app/app.db
 /migrations/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+__pycache__/
+
+*.zip
+*.lnk
